--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "eslint-config-next": "13.4.4",
+    "mobx": "^6.9.0",
+    "mobx-react": "^7.6.0",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
