--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,13 @@
 {
-	"extends": ["next/core-web-vitals", "airbnb", "airbnb/hooks", "airbnb-typescript"],
-	"plugins": ["jsx-a11y"],
-	"parserOptions": {
-		"project": "./tsconfig.json"
-	},
-	"rules": {
-		"no-console":"off"
-	}
+  "extends": ["next/core-web-vitals", "airbnb", "airbnb-typescript"],
+  "plugins": ["jsx-a11y"],
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
+  "rules": {
+    "no-console": "off",
+    "react/jsx-props-no-spreading": "off",
+    "max-len": "off",
+    "import/no-extraneous-dependencies": "off"
+  }
 }
