--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.3",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -16,19 +19,22 @@
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "next": "13.4.4",
+    "next-router": "^1.3.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
+    "react-image-gallery": "^1.2.11",
+    "react-responsive-carousel": "^3.2.23",
+    "react-select": "^5.7.3",
+    "sass": "^1.62.1",
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/react-image-gallery": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.41.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-config-airbnb-typescript": "^17.0.0"
   }
 }
