--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eslint-config-next": "13.4.4",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
-    "next": "13.4.4",
+    "next": "^13.4.5",
     "next-router": "^1.3.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
